--- a/dsaii/templates/about.html
+++ b/dsaii/templates/about.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="{% static 'team.css' %}">
 <link rel="stylesheet" href = "https://unp.com/boxicons@latest/css/boxicons.min.css"/>
 <body>
-<h1 style="color: white; font-weight: 900; text-align: center;"><br>TEAM</h1>
+<h1 style="color: white; font-weight: 900; text-align: center;"><br>TEAM<br></h1>
 
 
         <div class="container" >
