--- a/dsaii/templates/base.html
+++ b/dsaii/templates/base.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body style="background: black;" >
+<body  background="/static/bggg.jfif" style="background: #2B2B2B;" >
 {% include 'navigation.html' %}
   {% block content %}
 
