--- a/static/team.css
+++ b/static/team.css
@@ -14,6 +14,7 @@ body{
     align-items: center;
     flex-wrap: wrap;
     min-height: 100vh;
+
 }
 
 
@@ -147,7 +148,7 @@ input[type="submit"]:hover{
 
 @media (max-width: 750px) {
     body{
-    background-image: url(/static/space2.png);
+    background-image: url(/static/shayad.jpeg);
     backdrop-filter: brightness(1.5);
 }
     .container{
