--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -59,6 +59,28 @@
                     </div>
 
                 </div>
+     <div class="cardzz">
+                    <div class="content">
+                        <div class="imgBox">
+                            <img src="/static/inter.jpg">
+                         </div>
+                         <div class="contentBox">
+                             <br><h3>Interstellar Maniacs<br><span>What are wormholes?<br>Can time be considered as a dimension?<br>Lets try to bust these theories.</span></h3>
+                         </div>
+                    </div>
+
+                </div>
+     <div class="cardzz">
+                    <div class="content">
+                        <div class="imgBox">
+                            <img src="/static/inter.jpg">
+                         </div>
+                         <div class="contentBox">
+                             <br><h3>Interstellar Maniacs<br><span>What are wormholes?<br>Can time be considered as a dimension?<br>Lets try to bust these theories.</span></h3>
+                         </div>
+                    </div>
+
+                </div>
 
 
 </div>
