--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -51,7 +51,7 @@
     <div class="cardzz">
                     <div class="content">
                         <div class="imgBox">
-                            <img src="/static/inter.jpg">
+                            <img src="">
                          </div>
                          <div class="contentBox">
                              <br><h3>Interstellar Maniacs<br><span>What are wormholes?<br>Can time be considered as a dimension?<br>Lets try to bust these theories.</span></h3>
@@ -62,7 +62,7 @@
      <div class="cardzz">
                     <div class="content">
                         <div class="imgBox">
-                            <img src="/static/inter.jpg">
+                            <img src="">
                          </div>
                          <div class="contentBox">
                              <br><h3>Interstellar Maniacs<br><span>What are wormholes?<br>Can time be considered as a dimension?<br>Lets try to bust these theories.</span></h3>
@@ -73,7 +73,7 @@
      <div class="cardzz">
                     <div class="content">
                         <div class="imgBox">
-                            <img src="/static/inter.jpg">
+                            <img src="">
                          </div>
                          <div class="contentBox">
                              <br><h3>Interstellar Maniacs<br><span>What are wormholes?<br>Can time be considered as a dimension?<br>Lets try to bust these theories.</span></h3>
