--- a/dsaii/templates/about.html
+++ b/dsaii/templates/about.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="{% static 'team.css' %}">
 <link rel="stylesheet" href = "https://unp.com/boxicons@latest/css/boxicons.min.css"/>
 <body>
-<h1 style="color: white; font-weight: 900; text-align: center;"><br>TEAM<br></h1>
+<h1 style="color: white; font-weight: 900; text-align: center;"><br>Meet the Celestials<br></h1>
 
 
         <div class="container" >
@@ -18,7 +18,7 @@
                     <div class="imgBox">
                         <img src="">                    </div>
                      <div class="contentBox">
-                         <br><h3>NAME<br><span>POST</span></h3>
+                         <br><h3>SUN<br><span>POST</span></h3>
                      </div>
                 </div>
 
@@ -29,7 +29,7 @@
                     <div class="imgBox">
                         <img src=""/>                     </div>
                      <div class="contentBox">
-                         <br><h3>NAME<br><span>POST</span></h3>
+                         <br><h3>MERCURY<br><span>POST</span></h3>
                      </div>
                 </div>
 
@@ -42,12 +42,81 @@
                             <img src=""/>
                          </div>
                          <div class="contentBox">
-                             <br><h3>NAME<br><span>POST</span></h3>
+                             <br><h3>VENUS<br><span>POST</span></h3>
+                         </div>
+                    </div>
+
+                </div>
+            <div class="card">
+                    <div class="content">
+                        <div class="imgBox">
+                            <img src=""/>
+                         </div>
+                         <div class="contentBox">
+                             <br><h3>EARTH<br><span>POST</span></h3>
+                         </div>
+                    </div>
+
+                </div>
+            <div class="card">
+                    <div class="content">
+                        <div class="imgBox">
+                            <img src=""/>
+                         </div>
+                         <div class="contentBox">
+                             <br><h3>MARS<br><span>POST</span></h3>
+                         </div>
+                    </div>
+
+                </div>
+            <div class="card">
+                    <div class="content">
+                        <div class="imgBox">
+                            <img src=""/>
+                         </div>
+                         <div class="contentBox">
+                             <br><h3>JUPITER<br><span>POST</span></h3>
+                         </div>
+                    </div>
+
+                </div>
+            <div class="card">
+                    <div class="content">
+                        <div class="imgBox">
+                            <img src=""/>
+                         </div>
+                         <div class="contentBox">
+                             <br><h3>SATURN<br><span>POST</span></h3>
+                         </div>
+                    </div>
+
+                </div>
+            <div class="card">
+                    <div class="content">
+                        <div class="imgBox">
+                            <img src=""/>
+                         </div>
+                         <div class="contentBox">
+                             <br><h3>NEPTUNE<br><span>POST</span></h3>
+                         </div>
+                    </div>
+
+                </div>
+            <div class="card">
+                    <div class="content">
+                        <div class="imgBox">
+                            <img src=""/>
+                         </div>
+                         <div class="contentBox">
+                             <br><h3>URANUS<br><span>POST</span></h3>
                          </div>
                     </div>
 
                 </div>
         </div>
+
+        </div>
+
         <br>
 <br>
 <br>
