--- a/dsaii/templates/blogs.html
+++ b/dsaii/templates/blogs.html
@@ -80,6 +80,8 @@ section::before{
     margin :20px;
     background: transparent;
     border-radius: 1.05em;
+    border-style: solid;
+    border-color: white;
 
 }
 
@@ -243,10 +245,7 @@ input[type="submit"]:hover{
         .container .ul .li .a{
             font-size: small;
         }
-        body{
-            background-image: url(/static/space2.png);
-            backdrop-filter: brightness(1.5);
-        }
+
     }
 </style>
 
