--- a/dsaii/templates/events.html
+++ b/dsaii/templates/events.html
@@ -13,7 +13,7 @@
 
                      </div>
                      <div class="contentBox">
-                         <br><h3>Coding Hour<br><span>A coding/programming competition <br>4th December 2021</span></h3>
+                         <br><h3>Apollo 11<br><span>Reaching the Moon <br>4th December 2021</span></h3>
                      </div>
                                         <a href="{% url 'codhr' %}"><input type="submit" value="View"></a>
 
@@ -26,7 +26,7 @@
                         <img src="/static/images/quiz.png">
                      </div>
                      <div class="contentBox">
-                         <br><h3>Quizomania<br><span>An online interactive quiz<br>2nd October 2021</span></h3>
+                         <br><h3>Mangalyaan<br><span>India sends a satellite to Mars in its first attempt<br>2nd October 2021</span></h3>
                      </div>
                     <a href="{% url 'quiz' %}"><input type="submit" value="View"></a>
                 </div>
