--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -14,7 +14,7 @@
 
 
 
-    <div class="cardzz">
+   <a href="{% url 'blogs' %}"> <div class="cardzz">
                 <div class="content">
                     <div class="imgBox">
                         <img src="/static/eMS.jfif">                    </div>
@@ -23,9 +23,9 @@
                      </div>
                 </div>
 
-            </div>
+   </div></a>
 
-            <div class="cardzz">
+            <a href="{% url 'blogs' %}"><div class="cardzz">
                 <div class="content">
                     <div class="imgBox">
                         <img src="/static/JWT.png">                     </div>
@@ -34,10 +34,10 @@
                      </div>
                 </div>
 
-            </div>
+            </div></a>
 
 
-                <div class="cardzz">
+               <a href="{% url 'blogs' %}"> <div class="cardzz">
                     <div class="content">
                         <div class="imgBox">
                             <img src="/static/inter.jpg">
@@ -47,40 +47,8 @@
                          </div>
                     </div>
 
-                </div>
-    <div class="cardzz">
-                    <div class="content">
-                        <div class="imgBox">
-                            <img src="">
-                         </div>
-                         <div class="contentBox">
-                             <br><h3>Interstellar Maniacs<br><span>What are wormholes?<br>Can time be considered as a dimension?<br>Lets try to bust these theories.</span></h3>
-                         </div>
-                    </div>
+               </div></a>
 
-                </div>
-     <div class="cardzz">
-                    <div class="content">
-                        <div class="imgBox">
-                            <img src="">
-                         </div>
-                         <div class="contentBox">
-                             <br><h3>Interstellar Maniacs<br><span>What are wormholes?<br>Can time be considered as a dimension?<br>Lets try to bust these theories.</span></h3>
-                         </div>
-                    </div>
-
-                </div>
-     <div class="cardzz">
-                    <div class="content">
-                        <div class="imgBox">
-                            <img src="">
-                         </div>
-                         <div class="contentBox">
-                             <br><h3>Interstellar Maniacs<br><span>What are wormholes?<br>Can time be considered as a dimension?<br>Lets try to bust these theories.</span></h3>
-                         </div>
-                    </div>
-
-                </div>
 
 
 </div>
@@ -126,6 +94,8 @@ body{
     margin :20px;
     background: transparent;
     border-radius: 1.05em;
+    border-style: solid;
+    border-color: white;
 
 }
 
