--- a/dsaii/templates/navigation.html
+++ b/dsaii/templates/navigation.html
@@ -12,7 +12,7 @@
         <a class="nav-link waves-effect waves-light" href="{% url 'index' %}" >Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link waves-effect waves-light" href="{% url 'about' %}" >Team</a>
+        <a class="nav-link waves-effect waves-light" href="{% url 'about' %}" >GK Trivia</a>
       </li>
         <li class="nav-item">
         <a class="nav-link waves-effect waves-light" href="{% url 'events' %}" >Events</a>
@@ -90,7 +90,7 @@ nav ul{
 
 nav ul li{
     display: inline-block;
-    margin: 0 1.5em;
+    margin: 0 0.5em;
 
 }
 
