--- a/dsaii/templates/about.html
+++ b/dsaii/templates/about.html
@@ -15,10 +15,10 @@
 
             <div class="card">
                 <div class="content">
-                    <div class="imgBox">
-                        <img src="">                    </div>
+                    <div class="imgBox" style="width: 250px; height: 160px;">
+                        <img src="/static/sunproj.png" >                    </div>
                      <div class="contentBox">
-                         <br><h3>SUN<br><span>POST</span></h3>
+                         <br><h3>SUN<br><span>It is a star at the center of the Solar System.<br>Composition: Hydrogen & Helium<br>Radius: 6,95,842 km</span></h3>
                      </div>
                 </div>
 
@@ -27,9 +27,10 @@
             <div class="card">
                 <div class="content">
                     <div class="imgBox">
-                        <img src=""/>                     </div>
+                        <img src="/static/merproj.png"/>                     </div>
                      <div class="contentBox">
-                         <br><h3>MERCURY<br><span>POST</span></h3>
+                         <br><h3>MERCURY<br><span>Mercury is both the smallest planet in our solar system and the closest to the sun.<br>Orbital period:
+87.97 days<br>Radius: 2,439.7 km<br>Moons: 0</span></h3>
                      </div>
                 </div>
 
@@ -39,10 +40,11 @@
                 <div class="card">
                     <div class="content">
                         <div class="imgBox">
-                            <img src=""/>
+                            <img src="/static/venproj.png"/>
                          </div>
                          <div class="contentBox">
-                             <br><h3>VENUS<br><span>POST</span></h3>
+                             <br><h3>VENUS<br><span>Venus is the closest planet to Earth and one of the brightest objects in the sky. Referred to as Earth's 'sister planet' due to similar size, mass, composition, and proximity to the sun.<br>Orbital period:
+225 days<br>Radius: 6,051.8 km<br>Moons: 0</span></h3>
                          </div>
                     </div>
 
@@ -50,10 +52,11 @@
             <div class="card">
                     <div class="content">
                         <div class="imgBox">
-                            <img src=""/>
+                            <img src="/static/transbg.png"/>
                          </div>
                          <div class="contentBox">
-                             <br><h3>EARTH<br><span>POST</span></h3>
+                             <br><h3>EARTH<br><span>Earth is the third planet from the sun, and the only place we know of so far that’s inhabited by living things.<br>Orbital period:
+365.26 days<br>Radius: 6,371 km<br>Moons: 1</span></h3>
                          </div>
                     </div>
 
@@ -61,10 +64,11 @@
             <div class="card">
                     <div class="content">
                         <div class="imgBox">
-                            <img src=""/>
+                            <img src="/static/marsproj.png"/>
                          </div>
                          <div class="contentBox">
-                             <br><h3>MARS<br><span>POST</span></h3>
+                             <br><h3>MARS<br><span>Mars is a dusty, cold, desert world with a thin atmosphere. It has seasons, polar ice caps, extinct volcanoes, canyons, and weather.<br>Orbital period: 686.98 days<br>Radius:
+3,389.5 km<br>Moons: 2<br>Referred as "The Red Planet"</span></h3>
                          </div>
                     </div>
 
@@ -72,51 +76,54 @@
             <div class="card">
                     <div class="content">
                         <div class="imgBox">
-                            <img src=""/>
+                            <img src="/static/juproj.png"/>
                          </div>
                          <div class="contentBox">
-                             <br><h3>JUPITER<br><span>POST</span></h3>
+                             <br><h3>JUPITER<br><span>Jupiter is the largest planet in our solar system. After the Moon and Venus, it's usually the next brightest object in the night sky.<br>Orbital period:
+11.86 years<br>Radius: 69,911 km<br>Moons: 79</span></h3>
                          </div>
                     </div>
 
                 </div>
             <div class="card">
                     <div class="content">
-                        <div class="imgBox">
-                            <img src=""/>
+                        <div class="imgBox" style="width: 231px;">
+                            <img src="/static/satproj.png"/>
                          </div>
                          <div class="contentBox">
-                             <br><h3>SATURN<br><span>POST</span></h3>
+                             <br><h3>SATURN<br><span>Saturn, the sixth planet from the sun, is the second-largest planet in our solar system by mass and size.<br>Orbital period
+29.44 years<br>Radius: 58,232 km<br>Moons: 82<br>“The Jewel of the Solar System."</span></h3>
                          </div>
                     </div>
 
                 </div>
+
             <div class="card">
                     <div class="content">
                         <div class="imgBox">
-                            <img src=""/>
+                            <img src="/static/urproj.png"/>
                          </div>
                          <div class="contentBox">
-                             <br><h3>NEPTUNE<br><span>POST</span></h3>
+                             <br><h3>URANUS<br><span>Uranus spins on its side as it orbits the sun.<br>Orbital period:
+83.96 years<br>Radius: 25,362 km<br>Moons: 27</span></h3>
                          </div>
                     </div>
 
                 </div>
-            <div class="card">
+
+         <div class="card">
                     <div class="content">
                         <div class="imgBox">
-                            <img src=""/>
+                            <img src="/static/neproj.png"/>
                          </div>
                          <div class="contentBox">
-                             <br><h3>URANUS<br><span>POST</span></h3>
+                             <br><h3>NEPTUNE<br><span>Neptune is the farthest-known Solar planet from the Sun. It is the densest giant planet.<br>Orbital period
+                                164.77 years<br>Radius: 24,622 km<br>Moons: 14</span></h3>
                          </div>
                     </div>
 
-                </div>
+         </div>
         </div>
-
-        </div>
-
         <br>
 <br>
 <br>
