--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -28,7 +28,7 @@
             <a href="{% url 'blogs' %}"><div class="cardzz">
                 <div class="content">
                     <div class="imgBox">
-                        <img src="/static/JWT.png">                     </div>
+                        <img src="/static/jwt.png">                     </div>
                      <div class="contentBox">
                          <br><h3>James Webb Telescope<br><span>Click here to view why and how is JWT better than Hubble!</span></h3>
                      </div>
@@ -40,7 +40,7 @@
                <a href="{% url 'blogs' %}"> <div class="cardzz">
                     <div class="content">
                         <div class="imgBox">
-                            <img src="/static/inter.jpg">
+                            <img src="/static/interst.jpg">
                          </div>
                          <div class="contentBox">
                              <br><h3>Interstellar Maniacs<br><span>What are wormholes?<br>Can time be considered as a dimension?<br>Lets try to bust these theories.</span></h3>
