--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -28,7 +28,7 @@
             <a href="{% url 'blogs' %}"><div class="cardzz">
                 <div class="content">
                     <div class="imgBox">
-                        <img src="/static/jwt.png">                     </div>
+                        <img src="/static/ss.png">                     </div>
                      <div class="contentBox">
                          <br><h3>James Webb Telescope<br><span>Click here to view why and how is JWT better than Hubble!</span></h3>
                      </div>
