--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -3,10 +3,10 @@
 <!--<link rel="stylesheet" href = "http://www.w3schools.com/lib/w3.css"/>-->
 <body>
 
-
-<div class="container">
-        <br><br><br> <h1 style="color:white; font-weight: bold; text-align: center;">Exploring<br>THE CELESTIALS
+<h1 style="color:white; font-weight: bold; text-align: center;"><br>Exploring<br>THE CELESTIALS
 </h1>
+<div class="container">
+
        <br><p style="color: white;text-align: center;">
                    This website is for all you curious minds out there who love space and its wonders. Welcome aboard and hop along to explore the space with us.</p>
 
@@ -52,7 +52,7 @@
 
 
 </div>
-<br><br><br>
+<br><br><br><br><br>
 </body>
 <style>
     @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,700')
@@ -83,8 +83,6 @@ body{
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    margin: 40px 0;
-    left: 200px;
 }
 
 .container .cardzz{
