--- a/dsaii/templates/blogs.html
+++ b/dsaii/templates/blogs.html
@@ -3,7 +3,7 @@
  <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js'></script>
  <script  src="./script.js"></script>
 <body>
-<h1 style="color: white; font-weight: 900; text-align: center;"><br>BLOGS</h1>
+<h1 style="color: white; font-weight: 900; text-align: center;"><br>BLOGS<br></h1>
 
     <div class="container" >
 
