--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -223,8 +223,8 @@ input[type="submit"]:hover{
     .container{
             left: 0px;
     }
-    .container .card .content{
-        opacity: 1;
+    .container .cardzz{
+        width:320px;
     }
     }
 </style>
