--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -224,7 +224,8 @@ input[type="submit"]:hover{
             left: 0px;
     }
     .container .cardzz{
-        width:320px;
+        width: 300px;
+    height: 420px;
     }
     }
 </style>
