--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -5,14 +5,9 @@
 
 <h1 style="color:white; font-weight: bold; text-align: center;"><br>Exploring<br>THE CELESTIALS
 </h1>
-<div class="container">
-
-       <br><p style="color: white;text-align: center;">
+     <br><p style="color: white;text-align: center;">
                    This website is for all you curious minds out there who love space and its wonders. Welcome aboard and hop along to explore the space with us.</p>
-
-
-
-
+<div class="container">
 
    <a href="{% url 'blogs' %}"> <div class="cardzz">
                 <div class="content">
@@ -83,6 +78,7 @@ body{
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+    left: 10px;
 }
 
 .container .cardzz{
@@ -94,6 +90,7 @@ body{
     border-radius: 1.05em;
     border-style: solid;
     border-color: white;
+
 
 }
 
