--- a/dsaii/templates/l1.html
+++ b/dsaii/templates/l1.html
@@ -29,11 +29,11 @@ feedback_pass:'Passed: no action needed<br/><br/>More information:<br/><a href="
 
 
 <body>
-<div class="wrapper">
+<div class="container">
 
 <div id="content-main">
 <form action="/DSAIIAdmin/login/?next=/DSAIIAdmin/" method="post" id="login-form"><input type="hidden" name="csrfmiddlewaretoken" value="ugeXacOQ5c5CeMAUgY5uPXSsvV6aqpAuQJMlwFfQJ7OJxebz7w5Um5b2Pfb0SFhT">
-                    <img src="/static/kslogo.jpeg" style="width: 100px;
+                    <img src="/static/KSlogo.jpeg" style="width: 100px;
     height: 100px;
     border-radius: 25%;">
         <h3 id="site-name" style="color: white;">The Celestials Website Admin Area</h3>
@@ -55,12 +55,73 @@ feedback_pass:'Passed: no action needed<br/><br/>More information:<br/><a href="
     flex-wrap: wrap;
     min-height: 100vh;
 }
-
-@media (max-width: 750px) {
-    body{
-    background-image: url(/static/space2.png);
-    backdrop-filter: brightness(1.5);
+.container{
+     width: 400px;
+     height: 550px;
+     background: inherit;
+     position: absolute;
+     top: 43%;
+     left: 50%;
+     overflow: hidden;
+     margin-left: -175px;
+     margin-top: -250px;
+     border-radius: 8px;
+     background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.3);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255 , 255, 0.18);
 }
+
+form{
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+
+input{
+    background: 0;
+    width: 200px;
+    outline: none;
+    border: none;
+    border-bottom: 2px solid rgba(255,255,255,0.3);
+    margin: 20px 0;
+    padding-bottom: 10px;
+    font-size: 18px;
+    font-weight: bold;
+    color: rgba(255,255,255,0.8);
+}
+
+input[type="submit"]{
+    border: none;
+    border-radius: 8px;
+    padding-bottom: 0;
+    height: 60px;
+    background: #df2359;
+    color: #fff;
+    cursor: pointer;
+    transition: background-colour .3s;
+}
+input[type="submit"]:hover{
+    background: #c0392b;
+}
+@media (max-width: 750px) {
+    form{
+    top: 52%;
+    line-height: 0px;
+}
+    .container{
+            width: 330px;
+    height: 503px;
+
+    top: 45%;
+    left: 53%;
+
+    }
 }
 </style>
 {% endblock %}
