--- a/dsaii/templates/l1.html
+++ b/dsaii/templates/l1.html
@@ -33,7 +33,7 @@ feedback_pass:'Passed: no action needed<br/><br/>More information:<br/><a href="
 
 <div id="content-main">
 <form action="/DSAIIAdmin/login/?next=/DSAIIAdmin/" method="post" id="login-form"><input type="hidden" name="csrfmiddlewaretoken" value="ugeXacOQ5c5CeMAUgY5uPXSsvV6aqpAuQJMlwFfQJ7OJxebz7w5Um5b2Pfb0SFhT">
-                    <img src="/static/KSlogo.jpeg" style="width: 100px;
+                    <img src="/static/cele.jpeg" style="width: 100px;
     height: 100px;
     border-radius: 25%;">
         <h3 id="site-name" style="color: white;">The Celestials Website Admin Area</h3>
@@ -111,7 +111,7 @@ input[type="submit"]:hover{
     .container{
             width: 330px;
     height: 503px;
-    margin-top: 36px;
+    margin-top: 24px;
 
     }
 }
