--- a/dsaii/templates/l1.html
+++ b/dsaii/templates/l1.html
@@ -44,10 +44,7 @@ feedback_pass:'Passed: no action needed<br/><br/>More information:<br/><a href="
      <br><input type="submit" value="Log in here">
  </form>
 </div>
-</div>
-        <br class="clear">
-        </div>
-          </body>
+</div><br><br>
 <style>
     body{
     justify-content: center;
