--- a/dsaii/templates/article.html
+++ b/dsaii/templates/article.html
@@ -51,7 +51,9 @@
     backdrop-filter: brightness(0.5);
 }
 @media (max-width: 750px) {
-
+    body{
+        backdrop-filter: brightness(1.8);
+    }
     .container{
         backdrop-filter: brightness(0.5);
     }
