--- a/dsaii/templates/l1.html
+++ b/dsaii/templates/l1.html
@@ -111,6 +111,11 @@ input[type="submit"]:hover{
     margin-top: 24px;
 
     }
+    body{
+        backdrop-filter: brightness(1.8);
+    }
+
+
 }
 </style>
 {% endblock %}
