--- a/dsaii/templates/blogs.html
+++ b/dsaii/templates/blogs.html
@@ -209,6 +209,9 @@ input[type="submit"]:hover{
     .h1, h1{
 
     }
+    body{
+        backdrop-filter: brightness(1.8);
+    }
     .container{
             left: 0px;
             top: -30px;
