--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -216,7 +216,9 @@ input[type="submit"]:hover{
     }
 
 @media (max-width: 750px) {
-
+    body{
+        backdrop-filter: brightness(1.8);
+    }
     .container{
             left: 0px;
     }
