--- a/static/events.css
+++ b/static/events.css
@@ -158,4 +158,7 @@ input[type="submit"]:hover{
     .container .card .content{
         opacity: 1;
     }
+    body{
+        backdrop-filter: brightness(1.8);
+    }
     }
