--- a/dsaii/templates/blogs.html
+++ b/dsaii/templates/blogs.html
@@ -81,7 +81,7 @@ section::before{
     border-radius: 1.05em;
     border-style: solid;
     border-color: white;
-
+    backdrop-filter: blur(60px);
 }
 
 .container .cardzz:hover{
@@ -236,7 +236,9 @@ input[type="submit"]:hover{
     .container .cardzz .content{
         opacity: 1;
     }
-
+    .container .cardzz{
+        backdrop-filter: blur(60px);
+    }
 
     }
 
