--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -90,7 +90,7 @@ body{
     border-radius: 1.05em;
     border-style: solid;
     border-color: white;
-
+    backdrop-filter: blur(60px);
 
 }
 
@@ -218,6 +218,9 @@ input[type="submit"]:hover{
 @media (max-width: 750px) {
     body{
 
+    }
+    .container .cardzz{
+        backdrop-filter: blur(60px);
     }
     .container{
             left: 0px;
