--- a/dsaii/templates/base.html
+++ b/dsaii/templates/base.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body  background="/static/bggg.jfif" style="background: #2B2B2B;" >
+<body  background="/static/ag.jfif">
 {% include 'navigation.html' %}
   {% block content %}
 
@@ -37,3 +37,14 @@
 
 </body>
 </html>
+<style>
+    body{
+        background-size: cover;
+    }
+    @media (max-width: 750px){
+        body{
+        backdrop-filter: brightness(1.5);
+    }
+    }
+
+</style>
