--- a/dsaii/templates/events.html
+++ b/dsaii/templates/events.html
@@ -9,13 +9,13 @@
         <div class="card">
                 <div class="content">
                     <div class="imgBox">
-                         <img src="/static/chlogo1.png">
+                         <img src="/static/apollo11.jfif">
 
                      </div>
                      <div class="contentBox">
-                         <br><h3>Apollo 11<br><span>Reaching the Moon <br>4th December 2021</span></h3>
+                         <br><h3>Apollo 11<br><span>Landing on the Moon <br>July 20, 1969</span></h3>
                      </div>
-                                        <a href="{% url 'codhr' %}"><input type="submit" value="View"></a>
+                                        <a href="#"><input type="submit" value="View"></a>
 
                 </div>
 
@@ -23,27 +23,16 @@
         <div class="card">
                 <div class="content">
                     <div class="imgBox">
-                        <img src="/static/images/quiz.png">
+                        <img src="/static/mom.jpg">
                      </div>
                      <div class="contentBox">
-                         <br><h3>Mangalyaan<br><span>India sends a satellite to Mars in its first attempt<br>2nd October 2021</span></h3>
+                         <br><h3>Mangalyaan<br><span>India sends a satellite to Mars in its first attempt<br> 24 September 2014</span></h3>
                      </div>
-                    <a href="{% url 'quiz' %}"><input type="submit" value="View"></a>
+                    <a href="#"><input type="submit" value="View"></a>
                 </div>
 
             </div>
-    <div class="card">
-                <div class="content">
-                    <div class="imgBox">
-                        <img src="/static/inaug.png">
-                     </div>
-                     <div class="contentBox">
-                         <br><h3>DSAII Inauguration <br><span>Inauguration of the club<br>15th September 2021</span></h3>
-                     </div>
-                    <a href="{% url 'inaug' %}"><input type="submit" value="View"></a>
-                </div>
 
-            </div>
 
 
 </div>
