--- a/dsaii/templates/navigation.html
+++ b/dsaii/templates/navigation.html
@@ -107,4 +107,10 @@ nav .container .menu-btn{
     font-size: 1em;
 }
 
+.navbar.navbar-dark .breadcrumb .nav-item .nav-link:hover, .navbar.navbar-dark .navbar-nav .nav-item .nav-link:hover {
+    background: whitesmoke;
+    color: black;
+
+}
+
     </style>
