--- a/dsaii/templates/base.html
+++ b/dsaii/templates/base.html
@@ -17,7 +17,7 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
 
 </head>
-
+<link rel="icon" type="image/jpeg" href="/static/rrr.jpeg"/>
 <body  >
 {% include 'navigation.html' %}
   {% block content %}
