--- a/dsaii/templates/navigation.html
+++ b/dsaii/templates/navigation.html
@@ -113,4 +113,12 @@ nav .container .menu-btn{
 
 }
 
+@media (max-width: 750px){
+.navbar.navbar-dark .breadcrumb .nav-item .nav-link:hover, .navbar.navbar-dark .navbar-nav .nav-item .nav-link:hover {
+    background: transparent;
+    color: white;
+
+}
+}
+
     </style>
