--- a/dsaii/templates/base.html
+++ b/dsaii/templates/base.html
@@ -40,12 +40,11 @@
 <style>
     body{
         background-size: cover;
-        background-image: url(/static/ag.jfif);
+        background: black;
     }
     @media (max-width: 750px){
         body{
-                background-image: url(/static/bright.png);
-
+                background: black;
     }
     }
 
